--- a/index.html
+++ b/index.html
@@ -3,16 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Cloth Store</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav></nav>
+      <h1><strong>Cloth Store</strong></h1>
+      <nav></nav>
+    </header>
     <main>
-      <section>
-        <article>UAAAAAAAAAAAAAAAA</article>
-      </section>
+      <section></section>
+      <section></section>
+      <section></section>
     </main>
     <footer></footer>
     <script src="script.js"></script>
