--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
   </head>
 
   <body>
-    <header>
-      <nav></nav>
-    </header>
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
-    </main>
+    <header></header>
+    <main></main>
     <footer></footer>
     <script src="script.js"></script>
   </body>
